# michaelmas-tui

./: .gitignore  GEMINI.md  LICENSE  Makefile  README.md  agent.py  list_models.py  main.py  pyproject.toml  sheets_tools.py  tui.css  tui.py
src/michaelmas/: main.py
src/michaelmas/core/: agent.py  mcp.py  storage.py
src/michaelmas/tools/: search.py  sheets.py  shell.py
src/michaelmas/ui/: styles.css  tui.py
tests/: test_core_agent.py  test_core_agent_routing.py  test_core_mcp.py  test_core_storage.py  test_tools_search.py  test_tools_sheets.py  test_tools_sheets_failures.py  test_tools_shell.py  test_ui_tui.py
